Make reading blobs work through Blob mojo interface.

I apparently just passed null as FileSystemContext when reading a
blob through its mojo interface, which means any filesystem references
can't be read. I'm guessing I was meaning to fix that before I landed
the change that added the Read methods, but well, I didn't.

To fix this, rather than somehow passing FileSystemContext to BlobImpl
so that it can pass it on to the BlobReader, this changes BlobDataItem
to hold a reference to the FileSystemContext that was used to create a
blob, and then uses that for reading.

The bulk of this CL is then cleaning up places that no no longer need
a FileSystemContext.

Bug: 785412
Change-Id: I8b0131972ca1ade7b3f3fa3f732f5125b11d17e0