storage/browser/blob/blob_transport_request_builder.h
@@ -59,10 +59,12 @@ class STORAGE_EXPORT BlobTransportRequestBuilder {
   //          of the data elements. In this case, we call 'AppendFutureData' in
   //          the items that we expect to be backed by files writen by the
   //          renderer.
-  void InitializeForFileRequests(size_t max_file_size,
-                                 uint64_t blob_total_size,
-                                 const std::vector<DataElement>& elements,
-                                 BlobDataBuilder* builder);
+  void InitializeForFileRequests(
+      size_t max_file_size,
+      uint64_t blob_total_size,
+      const std::vector<DataElement>& elements,
+      const scoped_refptr<FileSystemContext>& file_system_context,
+      BlobDataBuilder* builder);
 
   // Initializes the request builder for shared memory requests. We try to
   // consolidate as much memory as possible in each shared memory segment we
@@ -81,6 +83,7 @@ class STORAGE_EXPORT BlobTransportRequestBuilder {
       size_t max_shared_memory_size,
       uint64_t blob_total_size,
       const std::vector<DataElement>& elements,
+      const scoped_refptr<FileSystemContext>& file_system_context,
       BlobDataBuilder* builder);
 
   // Initializes the request builder for IPC requests. We put as much memory
@@ -94,10 +97,12 @@ class STORAGE_EXPORT BlobTransportRequestBuilder {
   // builder: This is the builder that is populated with the 'future' versions
   //          of the data elements. In this case, we call 'AppendFutureData' for
   //          the items we expect to be populated later.
-  void InitializeForIPCRequests(size_t max_ipc_memory_size,
-                                uint64_t blob_total_size,
-                                const std::vector<DataElement>& elements,
-                                BlobDataBuilder* builder);
+  void InitializeForIPCRequests(
+      size_t max_ipc_memory_size,
+      uint64_t blob_total_size,
+      const std::vector<DataElement>& elements,
+      const scoped_refptr<FileSystemContext>& file_system_context,
+      BlobDataBuilder* builder);
 
   // The sizes of the shared memory handles being used (by handle index).
   const std::vector<size_t>& shared_memory_sizes() const {
